encryption of passwords and add admin account